# AuditPilot

./: .dockerignore  .env.example  .mcp.json.notes.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  docker-compose.yml  drizzle.config.ts  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: deploy.yml  eval.yml  lint.yml  test.yml
apps/api/: Dockerfile  README.md  checkpointer.py  config.py  graph.py  main.py  pyproject.toml  state.py
apps/api/agents/: __init__.py  mcp_clients.py  models.py  orchestrator.py
apps/api/auth/: clerk.py
apps/api/db/: init.sql  pool.py  schema.ts
apps/api/jobs/: __init__.py  client.py  exceptions.py  queue.py  schemas.py  worker.py
apps/api/observability/: __init__.py  langfuse.py  metrics.py  posthog.py
apps/api/routes/: __init__.py  (+4 more)
apps/auditor/: Dockerfile  README.md  main.py  pyproject.toml
apps/web/: Dockerfile  instrumentation.js  next.config.ts  package.json  tailwind.config.ts
context/: AUDITPILOT_CONTEXT.md  AUDITPILOT_FOUNDATIONS.md  AUDITPILOT_TOOLING_LANDSCAPE.md
docs/: prd.md  srs.md  system-design.md  user-stories.md
docs/adrs/: 0001-langgraph-runtime-choice.md  0002-three-agent-architecture.md  0003-fastapi-langgraph-sse-bridge.md  0004-read-only-by-design.md  0005-five-mcp-servers.md  0006-eval-methodology.md  0007-hitl-langgraph-interrupt.md  0008-free-tier-infrastructure.md  0009-observability-stack.md  0010-background-jobs-redis-streams.md  0011-langfuse-prompt-management.md  0012-public-demo-account.md  0013-nist-800-53-control-catalog.md  0014-drop-sentry-consolidate-posthog.md
(+111 files in other folders)
