[project]
name = "auditpilot-auditor"
version = "0.1.0"
description = "AuditPilot adversarial service — AdversarialAuditor via A2A v1.0"
license = { text = "Apache-2.0" }
authors = [{ name = "Tharanitharan M", email = "tharanimtharan@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
  "pydantic-ai>=1.0,<2.0",
  "a2a-sdk>=1.0,<2.0",
  "litellm>=1.50",
  "langfuse>=3.0",
  "opentelemetry-sdk>=1.25",
  "opentelemetry-exporter-otlp>=1.25",
  "opentelemetry-instrumentation-fastapi>=0.46b0",
  "sentry-sdk[fastapi]>=2.0",
  "cryptography>=42.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.6",
  "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 100
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
